--- a/.github/workflows/dev.push.yaml
+++ b/.github/workflows/dev.push.yaml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: go mod tidy
 
-      - name: Run linters
-        uses: golangci/golangci-lint-action@v4
+#      - name: Run linters
+#        uses: golangci/golangci-lint-action@v4
 
       - name: Run Tests
         run: go test ./... -v --race
